<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="change_server_ip">Change Server IP</string>
    <string name="app_name">Stepping Stones</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Stepping Stones</string>
    <string name="players">Players</string>
    <string name="cards">Cards</string>
    <string name="games">Games</string>
    <string name="title_activity_players">Players</string>
    <string name="stepping_stones">stepping stones</string>
    <string name="title_activity_game">Game</string>
    <string name="how_to_play_stepping_stones">How to play Stepping Stones</string>
    <string name="title_activity_instructions">Instructions</string>
    <string name="if_you_haven_t_yet_">If you haven\'t yet,</string>
    <string name="register_with_indoct">register with indoct</string>
    <string name="title_activity_add_player">Add Player</string>
    <string name="add_player">Add player</string>
    <string name="title_activity_cards">Manage Cards</string>
    <string name="spinnter_prompt">Number of cards per player</string>
    <string name="check_your_head_">Check your head?</string>
    <string name="checked_">Checked?</string>
    <string name="checked">Checked.</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="you_chose_">"You chose: "</string>
    <string name="choose_one">"Choose one"</string>
    <string name="clear">Clear</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me on this phone</string>
    <string name="submit">Login</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="id">id</string>
    <string name="waiting_reading_words_">Waiting reading words:</string>
    <string name="waiting_writing_words">Waiting writing words</string>
    <string name="players_lowercase">players</string>
    <string name="player_icons">Icons</string>
    <string name="player_delete_player">Delete Player</string>
    <string name="title_activity_card_players_list">Card Players List</string>
    <string name="test_name">Test Name</string>
    <string name="test_type">Type</string>
    <string name="test_status">Status</string>
    <string name="test">test</string>
    <string name="title_activity_card_player_words">Cards</string>
    <string name="scan">Scan</string>
    <string name="confirm_deletion">Previous test will be deleted</string>
    <string name="set_up_game">Set up game</string>
    <string name="error_detected">Error detected</string>
    <string name="dont_move_writing">Don\'t move the phone...</string>
    <string name="ok_writing">OK writing</string>
    <string name="error_writing">Error writing</string>
    <string name="cannot_use_card">Cannot use card</string>
    <string name="put_the_tag_under_the_phone">Put the tag under the phone and try again.</string>
    <string name="already_written">Word has already been writtn!</string>
    <string name="player_setup_complete">Player set up complete.</string>
    <string name="games_reading_stones">Reading Stones</string>
    <string name="title_activity_game_reading_stones">Reading Stones</string>
    <string name="title_activity_game_writing_stones">Writing Stones</string>
    <string name="action_settings">Settings</string>

    <!-- Game status strings -->
    <string name="game_not_ready">Game Not Ready</string>
    <string name="game_ready">Game Ready</string>
    <string name="playing">Playing</string>
    <string name="final_round">Final Round</string>
    <string name="game_over">Game Over</string>
    <string name="fake_tag">Fake Tag</string>
    <string name="title_activity_snazzy_thumbwork">Snazzy Thumbwork</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_game_reading_stones_instructions">How To Play Reading Stones</string>
    <string name="instructions_menu_item">Instructions</string>
    <string name="text">text</string>
    <string name="definition">definition</string>
    <string name="instructions_string">This game is based on the card game Hula.  If the game is for 12 words, it would be played as such. \n 1 - Each player has their own deck of 12 words split into 12 text cards and 12 definition cards, 24 cards in total.\n 2 - Shuffle the text and definition cards separately and put the two groups in front of each player. \n 3 - Each player takes 6 text cards and 1 definition card to start. \n 4 - In each round, a player needs to put down one card a discarded card pile. \n 5 - Then they take a new card from either their text or their definition deck.  If a player has two or less cards on their turn, they can pick up two cards on their turn, one reading and one writing.  If there is not enough cards to pick up in the definition or text piles, the discarded piles are shuffled and put underneath any remaining cards. \n 6 - The player then has the option to put down pairs of matching cards.  They put the phone down on each card in turn, making sure to scan the matching pairs in their text-definition or definition-text order. \n 7 - The first pair of matching text-definition cards is worth 1 point.  The second pair will be worth 3.  The next 4.  \n 8 - The next player takes their turn, starting from step 4.</string>
    <string name="remote_call_failed">Server not responding, try again.</string>
    <string name="card_already_played">Card already played, no repeats.</string>
    <string name="reset_game_menu_item">Reset game</string>
    <string name="house_decks">House decks</string>
    <string name="title_activity_card_decks">All House Decks</string>
    <string name="add_deck">Add deck</string>
    <string name="deck_name">Deck name</string>
    <string name="save_decks">Save House Decks</string>
    <string name="load_decks">Load House Decks</string>
    <string name="title_activity_card_deck">House Deck</string>
    <string name="add_reading_card">Add Reading Card</string>
    <string name="add_writing_card">Add Writing Card</string>
    <string name="scan_">Scan </string>
    <string name="now"> now</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="use_house_deck">Use house deck</string>
    <string name="title_activity_card_player_house_deck">CardPlayerHouseDeckActivity</string>
    <string name="reuse_or_write_id">Reuse or Write ID</string>
    <string name="checkbox_or_input_answers">Checkbox or Input answers</string>
    <string name="checkbox">Checkbox</string>
    <string name="input">Input</string>
    <string name="guess_hint">Guess/Hint</string>
    <string name="next">Next</string>
    <string name="snazzy_thumbwork">Snazzy Thumbwork</string>
    <string name="title_activity_game_concentration">GameConcentrationActivity</string>
    <string name="concentration_stones">Concentration Stones</string>

</resources>