<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <Button
        android:id="@+id/game_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/games" />

    <Button
        android:id="@+id/players_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/game_button"
        android:layout_alignParentLeft="true"
        android:text="@string/players" />

    <Button
        android:id="@+id/cards_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/players_button"
        android:layout_alignParentLeft="true"
        android:text="@string/cards" />

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:layout_above="@+id/cards_button"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="14dp"
        android:contentDescription="@string/stepping_stones"
        android:src="@drawable/stepping_stones" />

</RelativeLayout>
